# Anthony_Gen3

kortex_description/robots/: gen3_custom_gripper.xacro
kortex_gazebo/launch/: spawn_kortex_robot.launch
kortex_move_it_config/gen3_custom_gripper_move_it_config/: .setup_assistant  CMakeLists.txt  package.xml
kortex_move_it_config/gen3_custom_gripper_move_it_config/config/: ros_controllers.yaml
kortex_move_it_config/gen3_custom_gripper_move_it_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gen3_custom_gripper_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_test/: CMakeLists.txt  package.xml
moveit_test/launch/: test.launch
moveit_test/src/: test_file.cpp
